--- a/day08_18_mongodb/pom.xml
+++ b/day08_18_mongodb/pom.xml
@@ -69,6 +69,13 @@
 		<artifactId>log4j</artifactId>
 		<version>1.2.16</version>
 	</dependency>
+	
+	<dependency>
+		<groupId>org.slf4j</groupId>
+		<artifactId>slf4j-log4j12</artifactId>
+		<version>1.7.12</version>
+	</dependency>
+	
   </dependencies>
   
   
